--- a/demo-app/requirements.txt
+++ b/demo-app/requirements.txt
@@ -1,6 +1,7 @@
 # GuardianAI Demo Application - Python Dependencies
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-google-cloud-aiplatform>=1.36.0
-guardianai>=0.1.0
-python-dotenv>=1.0.0
+flask==3.0.0
+flask-cors==4.0.0
+google-cloud-aiplatform==1.38.0
+google-generativeai==0.3.1
+python-dotenv==1.0.0
+requests==2.31.0
