Complete Phase 7: Cloud Deployment Configuration (Tasks 42-51)
- Backend Dockerfile for Cloud Run deployment
- Cloud Build configuration (cloudbuild.yaml)
- Cloud Function main.py with Pub/Sub trigger
- Automated deployment scripts (deploy.sh & deploy.ps1)
- Secret Manager integration for credentials
- Comprehensive deployment documentation
- Production-ready configuration
- Cost estimation and monitoring setup
- Security best practices implemented
- CI/CD pipeline templates

Deployment ready with:
✅ All credentials integrated (Datadog + GCP)
✅ Automated deployment scripts for Windows/Linux
✅ Secret Manager for secure credential storage
✅ Cloud Run for backend (auto-scaling)
✅ Cloud Functions for telemetry processing
✅ Pub/Sub for event streaming
✅ Firestore for data persistence
✅ Comprehensive error handling and logging
✅ Production monitoring with Datadog
✅ Complete documentation

DEPLOYMENT COMMANDS:
Windows: .\deploy.ps1
Linux/Mac: ./deploy.sh

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,27 @@ temp/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Environment variables
+.env
+**/.env
+*.json
+credentials.json
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info/
+.pytest_cache/
+
+# Node
+node_modules/
+.next/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
