Enterprise UI transformation: Dark theme, animations, toast system, and backend fixes
- Phase 1-3: Complete UI/UX redesign with enterprise-grade design
- Added counter animations, entrance effects, loading skeletons
- Implemented ToastContext for notifications
- Fixed all backend imports (absolute to relative)
- Added Demo Mode with futuristic control panel
- Enhanced Threats page with expandable cards
- Added Firebase authentication
- Integrated Datadog monitoring

--- a/pipeline/requirements-function.txt
+++ b/pipeline/requirements-function.txt
@@ -1,5 +1,6 @@
 # Cloud Function dependencies
 google-cloud-firestore==2.13.1
 google-cloud-pubsub==2.18.4
+google-cloud-aiplatform==1.38.0
 datadog==0.47.0
 functions-framework==3.5.0
