--- a/pipeline/requirements.txt
+++ b/pipeline/requirements.txt
@@ -3,5 +3,6 @@ functions-framework>=3.5.0
 google-cloud-firestore>=2.13.0
 google-cloud-aiplatform>=1.36.0
 datadog>=0.47.0
+datadog-api-client>=2.18.0
 ddtrace>=2.3.0
 httpx>=0.25.0
