Fix Render build: Disable Poetry and use pip
- Added POETRY_VERSION='' to disable Poetry in render.yaml
- Added package-mode = false to pyproject.toml
- Forces Render to use pip install -r requirements.txt
- Fixes: 'No file/folder found for package guardianai-backend' error

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -11,6 +11,8 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.13.0
+      - key: POETRY_VERSION
+        value: ""
       - key: GCP_PROJECT_ID
         sync: false
       - key: GOOGLE_APPLICATION_CREDENTIALS_JSON
